Atualização de documentos e refatoração

--- a/experiencia.html
+++ b/experiencia.html
@@ -27,7 +27,7 @@
         </label>
         <nav class="cabecalho__navegacao">
             <ul class=" cabecalho__lista">
-                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="experiencia.html"
+                <li class="cabecalho__lista-item cabecalho__lista--linha link__experiencia"><a href="experiencia.html"
                         class="cabecalho__link">A experiência</a>
                 </li>
                 <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="setores.html"
@@ -44,55 +44,53 @@
             <span class="banner__imagem banner__imagem--experiencia"></span>
             <h1 class="banner__titulo">A Experiência</h1>
         </div>
-        <div class="fundo">
-            <section class="informacoes informacoes--experiencia">
-                <div class="experiencia--direita">
-                    <span class="informacoes__imagem informacoes__imagem--experiencia"></span>
-                    <div class="informacoes__descricao informacoes__descricao--experiencia">
-                        <h2 class="informacoes__tiulo informacoes__tiulo--experiencia">Acessibilidade e Inclusão</h2>
-                        <p class="informacoes__texto informacoes__texto--experiencia">Nosso evento tenta abraçar um
-                            público
-                            mais amplo em todos os sentidos,
-                            de todas as idades, corpos, gostos e pensamentos! Isso está presente no espaço físico, na
-                            sinalização, no treinamento da equipe de apoio, na comunicação em libras, braile, visual e
-                            tátil. Além disso, dispomos de ingressos gratuitos para pessoas com deficiência e
-                            acompanhantes,
-                            pessoas idosas e crianças!</p>
-                    </div>
+        <section class="informacoes informacoes--experiencia">
+            <div class="experiencia--direita">
+                <span class="informacoes__imagem informacoes__imagem--experiencia"></span>
+                <div class="informacoes__descricao informacoes__descricao--experiencia">
+                    <h2 class="informacoes__tiulo informacoes__tiulo--experiencia">Acessibilidade e Inclusão</h2>
+                    <p class="informacoes__texto informacoes__texto--experiencia">Nosso evento tenta abraçar um
+                        público
+                        mais amplo em todos os sentidos,
+                        de todas as idades, corpos, gostos e pensamentos! Isso está presente no espaço físico, na
+                        sinalização, no treinamento da equipe de apoio, na comunicação em libras, braile, visual e
+                        tátil. Além disso, dispomos de ingressos gratuitos para pessoas com deficiência e
+                        acompanhantes,
+                        pessoas idosas e crianças!</p>
                 </div>
-                <div class="experiencia--esquerda">
-                    <span class="informacoes__imagem informacoes__imagem--experiencia2"></span>
-                    <div class="informacoes__descricao informacoes__descricao--experiencia-esquerda">
-                        <h2
-                            class="informacoes__tiulo informacoes__tiulo--experiencia informacoes__tiulo--experiencia--esquerda">
-                            Sustentabilidade</h2>
-                        <p
-                            class="informacoes__texto informacoes__texto--experiencia informacoes__texto--experiencia--esquerda">
-                            Queremos estar aqui celebrando
-                            daqui a
-                            50, 100 anos! Por isso, levamos o futuro do nosso planeta a sério. Nosso festival é carbono
-                            zero, com utilização de copos retornáveis, coleta e destinação adequada de resíduos, e
-                            transporte coletivo.</p>
-                    </div>
+            </div>
+            <div class="experiencia--esquerda">
+                <span class="informacoes__imagem informacoes__imagem--experiencia2"></span>
+                <div class="informacoes__descricao informacoes__descricao--experiencia-esquerda">
+                    <h2
+                        class="informacoes__tiulo informacoes__tiulo--experiencia informacoes__tiulo--experiencia--esquerda">
+                        Sustentabilidade</h2>
+                    <p
+                        class="informacoes__texto informacoes__texto--experiencia informacoes__texto--experiencia--esquerda">
+                        Queremos estar aqui celebrando
+                        daqui a
+                        50, 100 anos! Por isso, levamos o futuro do nosso planeta a sério. Nosso festival é carbono
+                        zero, com utilização de copos retornáveis, coleta e destinação adequada de resíduos, e
+                        transporte coletivo.</p>
                 </div>
-                <div class="experiencia--direita">
-                    <span class="informacoes__imagem informacoes__imagem--experiencia3"></span>
-                    <div class="informacoes__descricao informacoes__descricao--experiencia">
-                        <h2 class="informacoes__tiulo informacoes__tiulo--experiencia">Atrações</h2>
-                        <p class="informacoes__texto informacoes__texto--experiencia">Intervenções artísticas e
-                            culturais para todos os gostos! Durante os intervalos dos shows, nossa experiência contará
-                            com recreação para crianças, oficina de cerâmica, origami, circo e aquarela! Além disso,
-                            nosso espaço contra com 3 praças de alimentação, roda gigante e outros brinquedos!</p>
-                    </div>
+            </div>
+            <div class="experiencia--direita">
+                <span class="informacoes__imagem informacoes__imagem--experiencia3"></span>
+                <div class="informacoes__descricao informacoes__descricao--experiencia">
+                    <h2 class="informacoes__tiulo informacoes__tiulo--experiencia">Atrações</h2>
+                    <p class="informacoes__texto informacoes__texto--experiencia">Intervenções artísticas e
+                        culturais para todos os gostos! Durante os intervalos dos shows, nossa experiência contará
+                        com recreação para crianças, oficina de cerâmica, origami, circo e aquarela! Além disso,
+                        nosso espaço contra com 3 praças de alimentação, roda gigante e outros brinquedos!</p>
                 </div>
-        </div>
+            </div>
     </main>
 
     <footer class="rodape">
         <div class="rodape__logo--redes">
             <img src="assets/img/logo_preta.svg" class="rodape__logo" alt="Logotipo do CodeChella">
             <div class="rodape__texto--redes">
-                <h4 class="rodape__texto">Acesse nossas redes:</h4>
+                <h4 class="rodape__texto rodape__texto-redes">Acesse nossas redes:</h4>
                 <div class="rodape__redes">
                     <a href="#" class="rodape__redes--botao"><img src="assets/img/whatsapp.svg" alt="Whatsapp"></a>
                     <a href="#" class="rodape__redes--botao"><img src="assets/img/mensagem.svg" alt="Mensagem"></a>
@@ -104,7 +102,7 @@
         <div>
             <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
                     href="https://github.com/JoyceHeinze">Joyce
-                    Heinze</a>. Design por Alura.</p>
+                    Heinze. </a>Design por Alura.</p>
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
