--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             <span class="banner__imagem banner__imagem--home"></span>
             <h1 class="banner__titulo">Boas-vindas ao #CodeChella2023!</h1>
         </div>
-        <div class="fundo">
             <section class="informacoes">
                 <span class="informacoes__imagem informacoes__imagem--home"></span>
                 <div class="informacoes__descricao">
@@ -117,29 +116,28 @@
                 </ul>
                 <span class="bandas__imagem"></span>
             </section>
-        </div>
     </main>
 
     <footer class="rodape">
         <div class="rodape__logo--redes">
             <img src="assets/img/logo_preta.svg" class="rodape__logo" alt="Logotipo do CodeChella">
             <div class="rodape__texto--redes">
-                <h4 class="rodape__texto">Acesse nossas redes:</h4>
+                <h4 class="rodape__texto rodape__texto-redes">Acesse nossas redes:</h4>
                 <div class="rodape__redes">
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/whatsapp.svg" alt="Whatsapp"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/mensagem.svg" alt="Mensagem"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/instagram.svg" alt="Instragram"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/twitter.svg" alt="Twitter"></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-whatsapp fa-2x" style="color: #444444;" alt="Whatsapp"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-twitch fa-2x" style="color: #444444;" alt="Twitch"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-instagram fa-2x" style="color: #444444;" alt="Instragram"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-twitter fa-2x" style="color: #444444;" alt="Twitter"></i></a>
                 </div>
             </div>
         </div>
         <div>
             <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
                     href="https://github.com/JoyceHeinze">Joyce
-                    Heinze</a>. Design por Alura.</p>
+                    Heinze. </a>Design por Alura.</p>
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/36dfecbb43.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
