--- a/ingresso-comprado.html
+++ b/ingresso-comprado.html
@@ -44,50 +44,53 @@
             <span class="banner__imagem banner__imagem--ingresso-comprado"></span>
             <h1 class="banner__titulo banner__titulo--ingresso-comprado">Seu ingresso está aqui!</h1>
         </div>
-        <div class="fundo">
-            <h2 class="ingresso-comprado__titulo">Uhul, agora sim! Seu ingresso está aqui, apresente na entrada do
-                evento e divirta-se!</h2>
-            <section class="card__ingresso-comprado">
-                <div class="card__ingresso-comprado--imagens">
-                    <img src="assets/img/logo_preta.svg" class="card__imagem--logo">
-                    <img src="assets/img/icon-branco.png" class="card__imagem--icone">
-                </div>
-                <div class="card__qr-code--texto">
-                    <img src="assets/img/ingresso/ingresso-comprado/qr-code.png" class="card__imagem--qr-code">
-                    <div class="card__ingresso-comprado--textos">
-                        <h3 class="ingresso-comprado__titulo card-ingresso-comprado__titulo">Joyce Heinze</h3>
-                        <p class="card__ingresso-comprado--texto">Ingresso Costesia</p>
-                        <p class="card__ingresso-comprado--texto">Setor Pista</p>
-                        <p class="card__ingresso-comprado--texto">Data: 11/03</p>
-                        <p class="card__ingresso-comprado--texto">Local: São Paulo-SP</p>
+        <h2 class="ingresso-comprado__titulo">Uhul, agora sim! Seu ingresso está aqui, apresente na entrada do
+            evento e divirta-se!</h2>
+        <section class="card__ingresso-comprado">
+            <div class="card__ingresso-comprado--imagens">
+                <img src="assets/img/logo_preta.svg" class="card__imagem--logo">
+                <img src="assets/img/icon-branco.png" class="card__imagem--icone">
+            </div>
+            <div class="card__qr-code--texto">
+                <img src="assets/img/ingresso/ingresso-comprado/qr-code.png" class="card__imagem--qr-code">
+                <div class="card__ingresso-comprado--textos">
+                    <h3 class="ingresso-comprado__titulo card-ingresso-comprado__titulo">Joyce Heinze</h3>
+                    <p class="card__ingresso-comprado--texto">Ingresso Costesia</p>
+                    <p class="card__ingresso-comprado--texto card__ingresso-comprado--texto-setor">Setor Pista</p>
+                    <p class="card__ingresso-comprado--texto">Data: 11/03</p>
+                    <p class="card__ingresso-comprado--texto">Local: São Paulo-SP</p>
 
-                    </div>
                 </div>
-            </section>
-
-        </div>
+            </div>
+        </section>
     </main>
 
     <footer class="rodape">
         <div class="rodape__logo--redes">
             <img src="assets/img/logo_preta.svg" class="rodape__logo" alt="Logotipo do CodeChella">
             <div class="rodape__texto--redes">
-                <h4 class="rodape__texto">Acesse nossas redes:</h4>
+                <h4 class="rodape__texto rodape__texto-redes">Acesse nossas redes:</h4>
                 <div class="rodape__redes">
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/whatsapp.svg" alt="Whatsapp"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/mensagem.svg" alt="Mensagem"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/instagram.svg" alt="Instragram"></a>
-                    <a href="#" class="rodape__redes--botao"><img src="assets/img/twitter.svg" alt="Twitter"></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-whatsapp fa-2x"
+                            style="color: #444444;" alt="Whatsapp"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-twitch fa-2x"
+                            style="color: #444444;" alt="Twitch"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-instagram fa-2x"
+                            style="color: #444444;" alt="Instragram"></i></a>
+                    <a href="#" class="rodape__redes--botao"><i class="fa-brands fa-twitter fa-2x"
+                            style="color: #444444;" alt="Twitter"></i></a>
                 </div>
             </div>
         </div>
         <div>
             <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
                     href="https://github.com/JoyceHeinze">Joyce
-                    Heinze</a>. Design por Alura.</p>
+                    Heinze. </a>Design por Alura.</p>
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
+    <script src="js/ingresso-comprado.js"></script>
+    <script src="https://kit.fontawesome.com/36dfecbb43.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
