--- a/setores.html
+++ b/setores.html
@@ -30,7 +30,7 @@
                 <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="experiencia.html"
                         class="cabecalho__link">A experiência</a>
                 </li>
-                <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="setores.html"
+                <li class="cabecalho__lista-item cabecalho__lista--linha link__setores"><a href="setores.html"
                         class="cabecalho__link">Mapa de Setores</li></a>
                 <li class="cabecalho__lista-item cabecalho__lista--linha"><a href="informacoes-gerais.html"
                         class="cabecalho__link">Informações</li></a>
@@ -44,57 +44,55 @@
             <span class="banner__imagem banner__imagem--setores"></span>
             <h1 class="banner__titulo">Mapa de Setores</h1>
         </div>
-        <div class="fundo">
-            <div class="informacoes informacoes--setores">
-                <div class="setores--imagem-informacoes">
-                    <img src="assets/img/setores/mapa_setores.png" class="informacoes__imagem--setores"
-                        alt="Mapa de setores separado por categorias de ingresso">
-                    <div class="informacoes__lista-item--setores">
-                        <h3 class="informacoes__lista--titulo">Legenda:</h3>
-                        <ul>
-                            <li class="informacoes__item--setores premium">Pista Premium</li>
-                            <li class="informacoes__item--setores comum">Pista Comum</li>
-                            <li class="informacoes__item--setores terreo">Cadeiras térreo</li>
-                            <li class="informacoes__item--setores superiores">Cadeiras superiores</li>
-                            <li class="informacoes__item--setores rampas">Rampas</li>
-                        </ul>
-                    </div>
+        <div class="informacoes informacoes--setores">
+            <div class="setores--imagem-informacoes">
+                <img src="assets/img/setores/mapa_setores.png" class="informacoes__imagem--setores"
+                    alt="Mapa de setores separado por categorias de ingresso">
+                <div class="informacoes__lista-item--setores">
+                    <h3 class="informacoes__lista--titulo">Legenda:</h3>
+                    <ul>
+                        <li class="informacoes__item--setores premium">Pista Premium</li>
+                        <li class="informacoes__item--setores comum">Pista Comum</li>
+                        <li class="informacoes__item--setores terreo">Cadeiras térreo</li>
+                        <li class="informacoes__item--setores superiores">Cadeiras superiores</li>
+                        <li class="informacoes__item--setores rampas">Rampas</li>
+                    </ul>
                 </div>
             </div>
-            <h2 class="informacoes__tiulo informacoes__tiulo--setores">
-                Mais detalhes sobre os setores:</h2>
-            <div class="informacoes--setores-detalhes">
-                <div class="setores--parte-superior">
-                    <div class="informacoes__descricao informacoes__descricao--setores">
-                        <span
-                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-pista"></span>
-                        <h3 class="informacoes__tiulo--setores">Pista</h3>
-                        <p class="informacoes__texto informacoes__texto--setores">Pista convencional, atendida pelos
-                            bares e banheiros das laterais do estádio. Espaço amplo, com local para sentar e
-                            descansar.
-                            Separada da pista premium por uma grade.</p>
-                    </div>
+        </div>
+        <h2 class="informacoes__tiulo informacoes__tiulo--setores">
+            Mais detalhes sobre os setores:</h2>
+        <div class="informacoes--setores-detalhes">
+            <div class="setores--parte-superior">
+                <div class="informacoes__descricao informacoes__descricao--setores">
+                    <span
+                        class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-pista"></span>
+                    <h3 class="informacoes__tiulo--setores">Pista</h3>
+                    <p class="informacoes__texto informacoes__texto--setores">Pista convencional, atendida pelos
+                        bares e banheiros das laterais do estádio. Espaço amplo, com local para sentar e
+                        descansar.
+                        Separada da pista premium por uma grade.</p>
                 </div>
-                <div class="setores--parte-inferior">
-                    <div class="informacoes__descricao informacoes__descricao--setores">
-                        <span
-                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-premium"></span>
-                        <h3 class="informacoes__tiulo--setores">Pista Premium</h3>
-                        <p class="informacoes__texto informacoes__texto--setores">Pista mais próxima do palco, com
-                            acesso muito próximo a banheiros e bares num raio de 100m. Todas as pessoas idosas e/ou
-                            com
-                            deficiência têm direito a acesso gratuito a essa área.</p>
-                    </div>
+            </div>
+            <div class="setores--parte-inferior">
+                <div class="informacoes__descricao informacoes__descricao--setores">
+                    <span
+                        class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-premium"></span>
+                    <h3 class="informacoes__tiulo--setores">Pista Premium</h3>
+                    <p class="informacoes__texto informacoes__texto--setores">Pista mais próxima do palco, com
+                        acesso muito próximo a banheiros e bares num raio de 100m. Todas as pessoas idosas e/ou
+                        com
+                        deficiência têm direito a acesso gratuito a essa área.</p>
                 </div>
-                <div class="setores--parte-superior">
-                    <div class="informacoes__descricao informacoes__descricao--setores">
-                        <span
-                            class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-cadeiras"></span>
-                        <h3 class="informacoes__tiulo--setores">Cadeiras</h3>
-                        <p class="informacoes__texto informacoes__texto--setores">Opção de cadeiras térreas ou
-                            elevadas.
-                            Acesso próximo a banheiros e bares, visão um pouco elevada em relação às pistas.</p>
-                    </div>
+            </div>
+            <div class="setores--parte-superior">
+                <div class="informacoes__descricao informacoes__descricao--setores">
+                    <span
+                        class="informacoes__imagem informacoes__imagem--setores informacoes__imagem--setores-cadeiras"></span>
+                    <h3 class="informacoes__tiulo--setores">Cadeiras</h3>
+                    <p class="informacoes__texto informacoes__texto--setores">Opção de cadeiras térreas ou
+                        elevadas.
+                        Acesso próximo a banheiros e bares, visão um pouco elevada em relação às pistas.</p>
                 </div>
             </div>
         </div>
@@ -104,7 +102,7 @@
         <div class="rodape__logo--redes">
             <img src="assets/img/logo_preta.svg" class="rodape__logo" alt="Logotipo do CodeChella">
             <div class="rodape__texto--redes">
-                <h4 class="rodape__texto">Acesse nossas redes:</h4>
+                <h4 class="rodape__texto rodape__texto-redes">Acesse nossas redes:</h4>
                 <div class="rodape__redes">
                     <a href="#" class="rodape__redes--botao"><img src="assets/img/whatsapp.svg" alt="Whatsapp"></a>
                     <a href="#" class="rodape__redes--botao"><img src="assets/img/mensagem.svg" alt="Mensagem"></a>
@@ -116,10 +114,11 @@
         <div>
             <p class="rodape__texto rodape__texto--direita">Desenvolvido por <a
                     href="https://github.com/JoyceHeinze">Joyce
-                    Heinze</a>. Design por Alura.</p>
-            <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
+                    Heinze. </a>Design por Alura.</p>
+            <p class="rodape__texto rodape__texto--direita"> Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/36dfecbb43.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
